--- a/school-crowd.html
+++ b/school-crowd.html
@@ -514,7 +514,7 @@ https://github.com/tomtor/school-crowd
 		<label for="inputEmail" class="sr-only">Gebruiker</label>
 		<input type="email" id="idInput" class="form-control" placeholder="Je e-Mail of Naam" required autofocus>
 		<label for="inputPassword" class="sr-only">Wachtwoord</label>
-		<input type="password" id="pwInput" class="form-control" placeholder="Wachtwoord">
+		<input type="password" id="pwInput" class="form-control" placeholder="Wachtwoord (mag leeg blijven)">
 	</div>
 </div>
 </div>
