change redirect title

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>School Crowd secure redirect</title>
+    <title>School Crowd</title>
     <META http-equiv="refresh" content="1;URL=https://www.v7f.eu/school-crowd/school-crowd.html">
   </head>
   <body bgcolor="#ffffff">
