Add additional data to database

--- a/school-crowd.html
+++ b/school-crowd.html
@@ -491,7 +491,11 @@ https://github.com/tomtor/school-crowd
 				"properties" : {
 					"kind" : $("#selInput").val(),
 					"objlink": $("#linkInput").val().length ? $("#linkInput").val() : null,
-					"user" : $("#idInput").val()
+					"user" : $("#idInput").val(),
+					"location" : idLocation,
+				  "eMail" : idMail,
+				  "leeftijd" : idLeeftijd,
+				  "school" : idSchool
 				}
 			};
 
