--- a/school-crowd.html
+++ b/school-crowd.html
@@ -315,7 +315,7 @@ https://github.com/tomtor/school-crowd
 				c = c.substring(1);
 			}
 			if (c.indexOf(name) == 0) {
-				return c.substring(name.length,c.length);
+				return decodeURIComponent(c.substring(name.length,c.length));
 			}
 		}
 		return "";
