--- a/intro.html
+++ b/intro.html
@@ -71,13 +71,13 @@ function setCookies() {
     alert("Vul je e-Mail in!");
     return;
   }
-  setCookie("idVoornaam=", $("#idVoornaam").val());
-  setCookie("idLocation=", $("#idLocation").val());
-  setCookie("idLeeftijd=", $("#idLeeftijd").val());
-  setCookie("idSchool=", $("#idSchool").val());
-  setCookie("idMail=", $("#idMail").val());
-  setCookie("idPassword=", $("#idPassword").val());
-  setCookie("idSession=", Math.random().toString());
+  setCookie("idVoornaam", $("#idVoornaam").val());
+  setCookie("idLocation", $("#idLocation").val());
+  setCookie("idLeeftijd", $("#idLeeftijd").val());
+  setCookie("idSchool", $("#idSchool").val());
+  setCookie("idMail", $("#idMail").val());
+  setCookie("idPassword", $("#idPassword").val());
+  setCookie("idSession", Math.random().toString());
   window.location.href = 'school-crowd.html';
 }
 </script>
