fix insecure bootstrap https reference in intro.html

--- a/intro.html
+++ b/intro.html
@@ -31,8 +31,8 @@ https://github.com/tomtor/school-crowd
 <meta name="theme-color" content="#ffffff">
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+<link rel="stylesheet" href="bootstrap/bootstrap.min.css">
+<script src="bootstrap/bootstrap.min.js"></script>
 <link rel="stylesheet" href="school-crowd.css" />
 </head>
 <body>
