Redirect to intro.html

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
   <head>
     <title>School Crowd</title>
-    <META http-equiv="refresh" content="1;URL=https://school-crowd.v7f.eu/school-crowd.html">
+    <META http-equiv="refresh" content="1;URL=https://school-crowd.v7f.eu/intro.html">
   </head>
   <body bgcolor="#ffffff">
-    <center>Door naar de beveiligde pagina: <a href="https://school-crowd.v7f.eu/school-crowd.html">https://school-crowd.v7f.eu/school-crowd.html</a>
+    <center>Door naar de beveiligde pagina: <a href="https://school-crowd.v7f.eu/intro.html">https://school-crowd.v7f.eu/intro.html</a>
     </center>
   </body>
 </html>
