--- a/intro.html
+++ b/intro.html
@@ -164,6 +164,7 @@ function clrCookies() {
 	setCookie("idMail", "");
 	setCookie("idPassword", "");
 
+	$("#idLocation").val("");
 	copyCookies();
 }
 
