--- a/school-crowd.html
+++ b/school-crowd.html
@@ -418,6 +418,7 @@ https://github.com/tomtor/school-crowd
 		};
 		var msg= serverVote + '/add/' + encodeURIComponent(JSON.stringify(vote));
 		$.ajax({url: msg, success: function(result){ }});
+		map.closePopup();
 	}
 
 	function markersReceived(result) {
