--- a/school-crowd.html
+++ b/school-crowd.html
@@ -579,6 +579,7 @@ https://github.com/tomtor/school-crowd
 					"kind" : $("#selInput").val(),
 					"gebruiksdoel": gebruiksdoel,
 					"identificatie": identificatie,
+					"top10": top10,
 					"objlink": $("#linkInput").val().length ? $("#linkInput").val() : null,
 					//"user" : $("#idInput").val(),
 					"user" : idVoornaam,
