--- a/school-crowd.html
+++ b/school-crowd.html
@@ -234,13 +234,11 @@ https://github.com/tomtor/school-crowd
 	}
 
 	function getTOP10() {
-		var latlng= RDM.projection.project(lastLoc);
-		var x= latlng.x;
-		var y= latlng.y;
+		var xy= RDM.projection.project(lastLoc);
 		top10= "GEEN";
 		$.ajax({
 			url: "https://geodata.nationaalgeoregister.nl/top10nlv2/wms?request=GetFeatureInfo&service=WMS&version=1.1.1&layers=top10nlv2&query_layers=top10nlv2&styles=&srs=EPSG:28992&x=0&y=0&width=1&height=1&info_format=application/json" +
-				"&bbox=" + x + "," + y + "," + (x+0.1) + "," + (y+0.1),
+				"&bbox=" + xy.x + "," + xy.y + "," + (xy.x+0.1) + "," + (xy.y+0.1),
 			success: function(result) {
 				//alert(JSON.stringify(result));
 				try {
