Add votes edit, remove even/odd colors

--- a/geheim-beheer/votes.html
+++ b/geheim-beheer/votes.html
@@ -4,10 +4,10 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 <script src="sorttable.js"></script>
 
-<script src="secret.js"></script>
+<script src="secret_vote.js"></script>
 <style>
-tr td {
-	  background-color: #9999CC;
+td {
+	  background-color: #CC9999;
 		    color: black;
 }
 </style>
@@ -16,7 +16,7 @@ tr td {
   <p>
   <button onclick="refresh()" type="button">Refresh</button>
   (Click on a table header to sort)
-	<a href="votes.html">Edit/View Votes</a>
+	<a href="index.html">Edit/View Objects</a>
   </p>
 	<table id="json2" class="sortable">
 		<thead>
