--- a/geheim-beheer/index.html
+++ b/geheim-beheer/index.html
@@ -34,7 +34,8 @@ tr td {
 
 	<script>
 var serverBase = 'https://v7f.eu/pdok-demo-data';
-var server = serverBase + secret;
+var pubkey = '/0ff8d17a-dc80-11e5-b7b0-b827eb842aa1';
+var server = serverBase + pubkey;
 function delObject(key) {
 	console.log(key);
 	$.ajax({url: server+"/delete/"+key});
